--- a/develop/css/dev/utilites/_helpers.scss
+++ b/develop/css/dev/utilites/_helpers.scss
@@ -35,6 +35,36 @@
 .color-ruby {color: $ruby;}
 .color-grey {color: #4b4848;}
 
+h1, .h1 {
+	font-size: 36px;
+	margin: 0 0 30px;
+	font-weight: 400;
+	font-family: $cav;
+	display: block;
+}
+h2, .h2 {
+	font-size: 30px;
+	margin: 0 0 20px;
+	font-weight: 400;
+	font-family: $cav;
+	display: block;
+}
+h3, .h3 {
+	font-size: 24px;
+	margin: 0 0 20px;
+	font-weight: 400;
+	font-family: $cav;
+	display: block;
+}
+h4, .h4 {
+	font-size: 18px;
+	margin: 0 0 20px;
+	font-weight: 400;
+	font-family: $cav;
+	display: block;
+}
+
+
 
 a:not([class]) {
 	color: $ruby;
@@ -50,6 +80,26 @@ a:not([class]) {
 	margin: 0 0 30px;
 	font-size: 36px;
 	font-weight: 400;
+}
+.gray-bg {
+	background: #f7f7f7;
+}
+.bottom-shadow {
+	position: relative;
+	&:before {
+		content: '';
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 800px;
+		height: 40px;
+		margin: 0 auto;
+		text-align: center;
+		box-shadow: 0px 0px 50px rgba(0,0,0,0.24);
+		z-index: -1;
+		border-radius: 100%;
+	}
 }
 
 .btn {
