--- a/develop/jade/index.jade
+++ b/develop/jade/index.jade
@@ -23,7 +23,7 @@ block content
 				.title.text-center.color-white Выберите формат и размер фотокниги
 				ul.format-block__tab-list
 					li.format-block__tab-list-item.active
-						.format-block__tab-lis.hidden-xst-item-img.hidden-sm
+						.format-block__tab-list-item-img.hidden-sm.hidden-xs
 						span.format-block__tab-list-item-text Книги на нитке
 					li.format-block__tab-list-item
 						.format-block__tab-list-item-img.hidden-sm.hidden-xs
@@ -48,32 +48,38 @@ block content
 						.col-md-7.col-sm-12
 							ul.format-block__tab-block-list
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
+									a(href="#!")
+										img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 145 стр.
 									p.format-block__tab-block-list-item-price 6 440 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="img/form-2.png", alt="")
+									a(href="#!")
+										img.format-block__tab-block-list-item-img(src="img/form-2.png", alt="")
 									p.format-block__tab-block-list-item-text 100 стр.
 									p.format-block__tab-block-list-item-price 3 600 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
+									a(href="#!")
+										img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 145 стр.
 									p.format-block__tab-block-list-item-price 6 440 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
+									a(href="#!")
+										img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 100 стр.
 									p.format-block__tab-block-list-item-price 3 600 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="img/form-2.png", alt="")
+									a(href="#!")
+										img.format-block__tab-block-list-item-img(src="img/form-2.png", alt="")
 									p.format-block__tab-block-list-item-text 145 стр.
 									p.format-block__tab-block-list-item-price 6 440 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 320 руб.
 								li.format-block__tab-block-list-item
-									img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
+									a(href="#!")
+										img.format-block__tab-block-list-item-img(src="img/form-1.png", alt="")
 									p.format-block__tab-block-list-item-text 100 стр.
 									p.format-block__tab-block-list-item-price 3 600 руб.
 									p.format-block__tab-block-list-item-note 2 доп. страницы<br>+ 120 руб.
@@ -145,7 +151,7 @@ block content
 							.col-sm-6.xs-text-center
 								p.form-block__inner-title бесплатная книга!
 								.form-block__inner-slider-wrap
-									ul.form-block__inner-slider
+									ul.form-block__inner-slider(image-slider)
 										li.form-block__inner-slider-item
 											img.form-block__inner-slider-item-img(src="img/content/book.png", alt="slider")
 										li.form-block__inner-slider-item
