--- a/develop/css/dev/utilites/_base.scss
+++ b/develop/css/dev/utilites/_base.scss
@@ -30,12 +30,13 @@ button, input, textarea, select {
 .modal {
 	display: none;
 	width: 380px;
+	border: 1px solid #ddd!important;
 	&__header {
 		&-title {
 			font-family: $cav;
 			margin: 30px 0 20px 0;
 			text-align: center;
-			font-size: 16px;
+			font-size: 26px;
 		}
 	}
 }
