--- a/develop/css/dev/_content.scss
+++ b/develop/css/dev/_content.scss
@@ -477,8 +477,15 @@ $slider-height: 509px;
 			padding: 3px 40px;
 			display: inline-block;
 			vertical-align: top;
+			position: relative;
 			&:not(:last-child) {
 				border-right: 1px solid #c2c2c2;
+			}
+			&:hover {
+				.category-section__dropdown-wrap {
+					opacity: 1;
+					pointer-events: auto;
+				}
 			}
 			&-link {
 				color: #635e5e;
@@ -488,6 +495,13 @@ $slider-height: 509px;
 				&:hover {
 					color: $ruby;
 					text-decoration: none;
+				}
+				&-check {
+					display: inline-block;
+					margin: 0 0 0 3px;
+					position: relative;
+					top: -3px;
+					font-size: 15px;
 				}
 			}
 		}
@@ -514,6 +528,9 @@ $slider-height: 509px;
 				.category-section__block-inner {
 					@include transform(translateY(0%));	
 				}
+				.category-section__block-title {
+					color: $ruby;
+				}
 			}
 		}
 		&-inner {
@@ -536,6 +553,14 @@ $slider-height: 509px;
 				font-weight: 300;
 			}
 		}
+		&-title {
+			font-family: $cav;
+			font-size: 18px;
+			color: #4b4848;
+			text-align: center;
+			@include transition(all 0.2s ease-in-out);
+			
+		}
 	}
 	&__modal {
 		&-title {
@@ -547,6 +572,48 @@ $slider-height: 509px;
 		&-text {
 			font-weight: 300;
 			display: block;
+		}
+	}
+	&__dropdown {
+		margin: 0;
+		list-style-type: none;
+		background: #fff;
+		border: 1px solid $ruby;
+		border-radius: 30px;
+		padding: 25px 30px;
+		&:before {
+			content: '';
+			background: url(../img/d-arrow.png) 0 0 no-repeat;
+			@include position(absolute, 6px 0 null -40px);
+			margin: 0 auto;
+			width: 22px;
+			height: 20px;
+
+		}
+		&-wrap {
+			min-width: 225px;
+			z-index: 10;
+			padding-top: 25px;
+			opacity: 0;
+			pointer-events: none;
+			@include transition(all 0.2s ease-in-out);
+			@include position(absolute, 25px null null -43px);
+		}
+		&-item {
+			&:not(:last-child) {
+				margin-bottom: 8px;
+			}
+			&-link {
+				@include transition(all 0.2s ease-in-out);
+				color: #635e5e;
+				font-weight: 300;
+				&:hover,
+				&:focus,
+				&.current {
+					color: $ruby;
+					text-decoration: none;
+				}
+			}
 		}
 	}
 }
@@ -623,7 +690,6 @@ $slider-height: 509px;
 	background: url(../img/wall.jpg) 0 0 no-repeat;
 	background-size: cover;
 	position: relative;
-	z-index: -2;
 }
 
 .double-slider {
@@ -654,6 +720,51 @@ $slider-height: 509px;
 				font-weight: 300;
 				margin: 0;
 			}
+		}
+	}
+}
+.pagination {
+	text-align: center;
+	margin: 20px 0 0 0;
+	&__link {
+		display: inline-block;
+		margin: 0 8px;
+		color: #3c3c3c;
+		@include transition(all 0.2s ease-in-out);
+		width: 39px;
+		height: 39px;
+		border: 1px solid #ccc;
+		border-radius: 50%;
+		line-height: 39px;
+		text-align: center;
+		background: #fff;
+		&:hover {
+			background: #f4f4f4;
+			color: #3c3c3c;
+			text-decoration: none;
+		}
+		&:focus,
+		&.current {
+			text-decoration: none;
+			color: #fff;
+			background: $ruby;
+		}
+		&-prev,
+		&-next {
+			display: inline-block;
+			vertical-align: top;
+			margin: 10px 5px 0 5px;
+			opacity: 0.7;
+			@include transition(all 0.2s ease-in-out);
+			&:hover,
+			&:focus {
+				text-decoration: none;
+				opacity: 1;
+			}
+		}
+		&-next {
+			margin-top: 12px;
+			@include transform(rotate(180deg));
 		}
 	}
 }
