--- a/develop/css/dev/media/_media.scss
+++ b/develop/css/dev/media/_media.scss
@@ -85,6 +85,10 @@
 	.title {
 		font-size: 26px;
 	}
+	.subtitle {
+		font-size: 22px;
+		margin-top: 0 !important;
+	}
 	.main-slider {
 		$slider-height: 250px;
 		.bx-wrapper {
@@ -225,6 +229,15 @@
 				margin-bottom: 7px;
 				display: block;
 				border-right: none!important;
+				&-link {
+					&:active,
+					&:focus {
+						& + .category-section__dropdown-wrap {
+							max-height: 2000px;
+							margin: 10px 0;
+						}
+					}
+				}
 			}
 			&-btn {
 				margin-bottom: 30px;
@@ -241,6 +254,22 @@
 				}
 			}
 		}
+		&__dropdown {
+			&:before {
+				display: none;
+			}
+			&-wrap {
+				padding: 0;
+				margin: 0;
+				position: relative;
+				left: 0;
+				top: 0;
+				opacity: 1;
+				max-width: 320px;
+				max-height: 0;
+				overflow: hidden;
+			}
+		}
 	}
 	.double-slider {
 		&__block {
@@ -251,6 +280,11 @@
 			.bx-wrapper .bx-next {
 			  right: -30px;
 			}
+		}
+	}
+	.pagination {
+		&__link {
+			margin: 0 3px;
 		}
 	}
 }
@@ -299,6 +333,9 @@
 	.title {
 		font-size: 18px;
 		margin-bottom: 15px;
+	}
+	.subtitle {
+		font-size: 16px;
 	}
 	.format-block {
 		&__tab {
